basic funtionality completed

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,11 +1,11 @@
-.loading-spinner{
-  display      : flex;
-  align-content: center;
-  align-items  : center;
-  width       : 80vw;
-  height      : 70vh;
-  justify-content: center;
-}
+// .loading-spinner{
+//   display      : flex;
+//   align-content: center;
+//   align-items  : center;
+//   width       : 80vw;
+//   height      : 70vh;
+//   justify-content: center;
+// }
 
 
 .country-data{
