--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,13 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.loading-spinner{
+   display      : flex;
+ align-content: center;
+ align-items  : center;
+ width        : 80vw;
+ height       : 70vh;
+ justify-content: center;
+}
