--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -19,3 +19,12 @@
   text-align: center;
   font-weight: bold;
 }
+
+@media screen and (max-width: 600px) {
+  .side-nav {
+
+  &-drawer {
+    width: 50vw;
+  }
+}
+}
